[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/Data/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/ResultPopup.gd" type="Script" id=2]
[ext_resource path="res://GUI/Assets/Main_UI.png" type="Texture" id=3]

[node name="ResultPopup" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backgroud" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.545098, 0.890196, 0.211765, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -160.0
margin_right = 320.0
margin_bottom = 160.0
rect_min_size = Vector2( 200, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 7
patch_margin_top = 8
patch_margin_right = 7
patch_margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog/MarginContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 624.0
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTitle" type="Label" parent="PopupDialog/MarginContainer/VBoxContainer"]
margin_right = 608.0
margin_bottom = 38.0
custom_colors/font_color = Color( 1, 0.941176, 0.0862745, 1 )
text = "Title"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PopupDialog/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 608.0
margin_bottom = 248.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelInfo" type="Label" parent="PopupDialog/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 112.0
margin_top = 43.0
margin_right = 495.0
margin_bottom = 163.0
text = "You win!
Click back to main menu
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PopupDialog/MarginContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 608.0
margin_bottom = 296.0
custom_constants/separation = 8

[node name="ButtonStay" type="Button" parent="PopupDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Stay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="Button" parent="PopupDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 608.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.980392, 0.4, 0.188235, 1 )
text = "Back To Main"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_to_show" from="PopupDialog" to="Backgroud" method="show"]
[connection signal="popup_hide" from="PopupDialog" to="Backgroud" method="hide"]
[connection signal="gui_input" from="PopupDialog/MarginContainer/VBoxContainer/HBoxContainer/ButtonStay" to="." method="_on_Button_gui_input"]
[connection signal="pressed" from="PopupDialog/MarginContainer/VBoxContainer/HBoxContainer/ButtonStay" to="." method="_on_ButtonStay_pressed"]
[connection signal="gui_input" from="PopupDialog/MarginContainer/VBoxContainer/HBoxContainer/ButtonBack" to="." method="_on_Button_gui_input"]
[connection signal="pressed" from="PopupDialog/MarginContainer/VBoxContainer/HBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
